# ComputeConnect

./: CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTCONNECT_INTEGRATION.md  ARCHITECTURE.md  CONTRACT.md  ROADMAP.md  STATUS.md
docs/adr/: 0001-privacy-header-body-precedence.md  0002-real-second-engine-and-preference-placement.md  0003-run-journal-restart-reconciliation.md  0004-staleness-ceiling-and-config-surface.md
scripts/: second_engine.sh
src/computeconnect/: __init__.py  app.py  cli.py  config.py  engines.py  placement.py  privacy.py  providers.py  runs.py
tests/: conftest.py  test_agentconnect_client.py  test_auth.py  test_cli.py  test_faults.py  test_openai_layer.py  test_persistence.py  test_placement.py  test_privacy.py  test_real_engine.py  test_routes.py  test_streaming.py
