[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "computeconnect"
version = "0.1.0"
description = "ComputeConnect: the compute plane of the Connect family. Control-plane API for AgentConnect, OpenAI-compatible inference API for BrainConnect and direct applications, one backend."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Matthew Judge" }]
dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# YAML config files (--config foo.yaml). JSON config needs nothing extra.
config = ["pyyaml>=6"]

[project.scripts]
computeconnect = "computeconnect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
